--- a/style.css
+++ b/style.css
@@ -1,16 +1,301 @@
 body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Rajdhani", sans-serif !important;
+}
+.main {
   background: #772db1 !important;
+  display: flex;
+  height: 100vh;
+}
+/* Main Div's */
+.sidebar {
+  width: 30%;
+  background-color: #6B54B6;
+}
+.data_div {
+  background: #1B0F23;
+  width: 70%;
+}
+/* User Edit Profile  */
+.user_edit_info {
+  background-color: white;
+  width: 65%;
+  padding: 5px 10px;
+  margin-top: 5px;
+  border-radius: 5px 5px 0px 0px;
+}
+.user_edit_info h4 {
+  margin: 15px 0 0 0;
+}
+.social-connects h3,
+.social-connects p {
+  padding: 0 !important;
+  margin: 0;
+}
+.mt-0 {
+  margin: 0;
+}
+.social-connects {
+  margin-top: 18px;
+}
+/* User View Profile */
+.user_info {
+  width: 30%;
+  background: white;
+  height: fit-content;
+  border-radius: 0px 0px 5px 5px;
 }
 
-.user_info {
+.img-avatar {
+  border-radius: 50%;
+  border: 2px solid white;
+  margin-top: -55px;
+}
+
+.py-15,
+.px-15 {
+  padding: 10px;
+}
+.connect-btn-bar {
+  padding: 0 5px;
+}
+/* .mt-5 {
+  margin-top: 5px;
+
+} */
+
+/* Extra Classes For css */
+label {
+  /* margin: 0 5px; */
+  font-size: 16px !important;
+  font-weight: 600 !important;
+}
+input {
+  height: 20px;
+  border-radius: 5px;
+  outline: none;
+  border: 1px solid gainsboro;
+  font-family: "Rajdhani";
+  font-weight: 500 !important;
+  margin-left: 5px;
+  text-indent: 4px;
+  font-size: 16px !important;
+}
+input,
+.labels,
+#textarea {
+  padding: 5px;
+
+  font-size: 14px;
+  font-weight: 400;
+}
+.btn {
+  /* padding: 15px; */
+  height: 35px;
+}
+.col-md-6 {
+  width: 50%;
+}
+.col-md-4 {
+  width: 30%;
+}
+.d-flex {
+  display: flex;
+}
+
+.justify-content-between {
+  justify-content: space-between;
+}
+.justify-content-space-around {
+  justify-content: space-around;
+}
+.justify-content-center {
+  justify-content: center;
+}
+
+.align-items-center {
+  align-items: center;
+}
+.text-align-center {
+  text-align: center;
+}
+.mb-3 {
+  margin-bottom: 3px;
+}
+.mt-0 {
+  margin-top: 0;
+}
+.text-left {
+  text-align: left;
+}
+.m0a {
+  margin: 0 auto;
+}
+h1,
+h2,
+h3,
+h4,
+p,
+label {
+  color: #767779;
+}
+h4 {
+  color: grey;
+}
+
+#textarea {
+  width: 90%;
+  border-radius: 5px;
+  padding: 15px;
+  font-size: 16px;
+}
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-family: "Rajdhani", sans-serif !important;
+  color: white;
+  font-weight: 700;
+  font-size: 18px;
+  padding: 5px;
+}
+.update-button,
+.profile-button-message {
+  background: #5d489e;
+}
+.update-button:hover,
+.profile-button-message:hover {
+  background: #4a3a7c;
+}
+.setting-button,
+.profile-button-connect {
+  background: #fd3148;
+}
+.setting-button:hover,
+.profile-button-connect:hover {
+  background: #cc293c;
+}
+
+/* Responsivness Starts Here */
+
+@media (max-width: 576px) {
+  .py-15,
+  .px-15 {
+    padding: 5px;
+  }
+  .col-md-4,
+  .col-md-6 {
+    margin-top: 8px;
+  }
+  .sm-flex-direction-coloumn {
+    /* flex-direction: column; */
+    justify-content: space-between;
+  }
+  .sm-flex-direction-coloumn div input {
+    width: 80%;
+  }
+  .sm-flex-direction-coloumn div {
+    /* width: 100% ; */
+    justify-content: space-between;
+  }
+}
+
+/* // Medium devices (tablets, 768px and up) */
+@media (max-width: 768px) {
+  /* User Edit Profile  */
+  .user_edit_info,
+  .user_info {
+    margin: 15px auto;
+    /* margin: 0 auto; */
+    justify-content: center;
+    min-width: 90%;
+    padding: 5px 10px;
+  }
+  /* .flex-col-md {
+    flex-direction: column !important;
+  } */
+  /* User View Profile */
+  .user_info, .user_edit_info {
+    border-radius: 5px;
+  }
+
+  .sidebar {
+    width: 100%;
+    /* background-color: red; */
+  }
+  .data_div {
+    /* background: black; */
+    width: 100%;
+
+    position: relative;
+    flex-direction: column-reverse;
+    min-height: auto !important;
+  }
+  .flex-wrap-warp {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .flex-wrap-warp div {
+    justify-content: space-around;
+    width: 40%;
+  }
+}
+
+/* // Large devices (desktops, 992px and up) */
+@media (max-width: 992px) {
+  .main {
+    flex-direction: column;
+  }
+  .sidebar {
+    width: 100%;
+    /* background-color: red; */
+    min-height: 54px;
+  }
+  .user_edit_info {
+    /* background-color: brown; */
+    height: 100vh;
+  }
+
+  .data_div {
+    /* background: black; */
+    width: 100%;
+  }
+  /* Inputs Field width on medium devices */
+
+  .sm-flex-direction-coloumn div input {
+    width: 80%;
+  }
+}
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (max-width: 1286px) {
+  /* User Edit Profile  */
+  .user_edit_info {
+    /* background-color: brown; */
+    width: 55%;
+    padding: 5px 10px;
+  }
+
+  /* User View Profile */
+  .user_info {
+    width: 40%;
+    /* background: burlywood; */
+  }
+  .sm-flex-direction-coloumn div input {
+    width: 80%;
+  }
+  
+}
+
+/* .user_info {
   background: white !important;
   color: grey !important;
-  /* margin: 11px 8px !important; */
   border-radius: 15px;
   margin-top: -18% !important;
   width: 40% !important;
   margin: 25px auto ;
-  /* padding-top: 0 !important; */
 }
 .user_edit_info {
   background: white !important;
@@ -19,9 +304,9 @@ body {
   margin-top: 1% !important;
   border-radius: 15px;
   max-width: 60% !important;
-}
+} */
 
-@media (max-width: 786px) {
+/* @media (max-width: 786px) {
   .user_profile {
     flex-direction: column-reverse !important;
     justify-content: center !important;
@@ -45,8 +330,8 @@ body {
  
         min-width: 90% !important;
       }
-}
-.img-avatar {
+} */
+/* .img-avatar {
   border-radius: 50%;
   border: 4px solid white;
   margin-top: -45px;
@@ -62,4 +347,4 @@ body {
 }
 .profile-button-connect:hover {
   background: #cf283c !important;
-}
+} */
